WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286508
[CookieStoreAPI] get/getAll should ignore fragments when comparing URLs
https://bugs.webkit.org/show_bug.cgi?id=286508
Summary
[CookieStoreAPI] get/getAll should ignore fragments when comparing URLs
rupin
Reported
2025-01-24 14:57:05 PST
[CookieStoreAPI] get/getAll should ignore fragments when comparing URLs
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-24 14:57:29 PST
<
rdar://problem/143594009
>
rupin
Comment 2
2025-01-24 15:01:35 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39524
EWS
Comment 3
2025-01-25 11:04:30 PST
Committed
289390@main
(ad5849d93392): <
https://commits.webkit.org/289390@main
> Reviewed commits have been landed. Closing PR #39524 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug