[CookieStoreAPI] get/getAll should ignore fragments when comparing URLs https://bugs.webkit.org/show_bug.cgi?id=286508 rdar://143594009

Reviewed by Chris Dumez and Sihui Liu.

The get/getAll functions need to compare the url that was passed in
with the context's url. As per the WPT tests, they should do this
while ignoring the fragments in the urls.

Tested by WPT tests.

* LayoutTests/imported/w3c/web-platform-tests/cookie-store/cookieStore_getAll_arguments.https.any-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/cookie-store/cookieStore_get_arguments.https.any-expected.txt:
* Source/WebCore/Modules/cookie-store/CookieStore.cpp:
(WebCore::CookieStore::get):
(WebCore::CookieStore::getAll):

Canonical link: https://commits.webkit.org/289390@main